<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- SUGGESTED VIDEO GAME DISPLAY -->
    <LinearLayout
        android:id="@+id/game_display"
        android:layout_width="wrap_content"
        android:layout_height="375dp"

        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Game Image -->
        <ImageView
            android:id="@+id/image_game"
            android:layout_width="350dp"
            android:layout_height="230dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rectangle"
            android:contentDescription="@string/result_image"
            android:padding="10dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/gold_question_mark" />

        <!-- Title -->
        <TextView
            android:id="@+id/text_game_title"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/result_title"

            android:textColor="@color/neon_purple"
            android:textSize="18sp"
            android:textStyle="bold" />

<!--        Description -->
<!--        <TextView-->
<!--            android:id="@+id/text_game_description"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:background="@color/neon_purple"-->

<!--            android:ellipsize="end"-->
<!--            android:maxLines="8"-->
<!--            android:text="@string/result_description"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/black" />-->

        <!-- Rating -->
        <TextView
            android:id="@+id/text_game_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/result_rating"
            android:textColor="@color/neon_purple"
            android:textStyle="italic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>