<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <!-- Downloadable Font: pixelify_sans_medium    -->
    <!-- Custom Color:      neon_purple             -->
    <!-- Custom Size:       35sp                    -->
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:fontFamily="@font/bungee_shade"
        android:text="@string/app_title"
        android:textColor="@color/neon_purple"
        android:textSize="35sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_description"
        android:layout_width="300sp"
        android:layout_height="wrap_content"


        android:fontFamily="@font/pixelify_sans_regular"
        android:text="@string/app_description"
        android:textAlignment="center"

        android:textAppearance="@style/TextAppearance.AppDescription"
        app:layout_constraintEnd_toEndOf="@+id/app_title"
        app:layout_constraintStart_toStartOf="@+id/app_title"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <!-- USER SELECTION FOR GAME-->
    <TableLayout
        android:padding="10dp"
        android:id="@+id/game_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_description"


        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- GENRE SELECTION -->
        <TableRow
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <Spinner
                android:background="@drawable/rectangle_item"
                android:id="@+id/genreSpinner"
                android:textColor="@color/neon_pink"
                android:layout_marginEnd="4dp"
                android:textStyle="italic"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                />

            <Spinner
                android:id="@+id/platformSpinner"
                android:background="@drawable/rectangle_item"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:textColor="@color/neon_pink"
                android:layout_width="0dp"
                android:layout_height="48dp"
                />
        </TableRow>

        <!-- MULTIPLAYER SELECTION -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/multiplayerSwitch"
                android:paddingHorizontal="10dp"
                android:layout_width="wrap_content"
                android:text="@string/multiplayer"
                android:textColor="@color/black"
                android:layout_marginEnd="4dp"
                android:background="@drawable/rectangle_item"
                android:layout_height="48dp" />

            <Button
                android:id="@+id/button_getGame"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="@color/neon_purple"
                android:text="@string/button_text"
                android:textColor="@color/neon_blue"
                android:textStyle="bold"
                app:cornerRadius="10dp" />
        </TableRow>

    </TableLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/game_form"
        />

</androidx.constraintlayout.widget.ConstraintLayout>